fix startpage sizing and layout shift

--- a/components/Startpage/Startpage.module.css
+++ b/components/Startpage/Startpage.module.css
@@ -47,22 +47,11 @@
 
 .startpageListElementWrapper {
     margin-top: 20px;
-    width: 100%;
+    overflow-y: hidden !important;
 }
 
 .joinNote {
     margin-right: 35px;
-}
-
-.newAuctions,
-.endedAuctions {
-    min-height: 260px;
-}
-
-.popularSearches,
-.newPlayers,
-.newItems {
-    min-height: 120px;
 }
 
 .changelogItem {
